cambios billetera y responsive

--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -3,8 +3,10 @@
         <img style="    padding-left: 20px;" src="assets/home/lleva.png">
     </div>
     <div fxFlex="15" fxFlex.lt-md style="position: relative;">
-        <img src="assets/home/support.png" style="display: inline">
-        <p class="servicio"> &nbsp;Servicio al cliente</p>
+        <a routerLink="/servicio-cliente">
+            <img src="assets/home/support.png" style="display: inline">
+            <p class="servicio"> &nbsp;Servicio al cliente</p>
+        </a>
     </div>
     <div fxFlex="15" fxFlex.lt-md style="position: relative;display: flex !important">
         <img src="assets/home/person.png" style="display: inline">
@@ -18,7 +20,7 @@
         <span>Mi cuenta</span>
       </button>
             <mat-divider></mat-divider>
-            <button mat-menu-item>
+            <button mat-menu-item routerLink="/historial">
         <span>Historial de servicio</span>
       </button>
             <mat-divider></mat-divider>
@@ -26,7 +28,7 @@
         <span>Billetera virtual</span>
       </button>
             <mat-divider></mat-divider>
-            <button mat-menu-item>
+            <button mat-menu-item routerLink="/email-certificado">
         <span>Email certificado</span>
       </button>
             <mat-divider></mat-divider>
