--- a/src/app/components/password/change-password/change-password.component.html
+++ b/src/app/components/password/change-password/change-password.component.html
@@ -1,51 +1,54 @@
 <div class="background">
-  <div style="padding-top: 13%;padding-bottom: 3% " fxLayout="row" fxLayoutAlign="center center">
-    <img src="../../../../assets/login/lleva.png" height="0.7%" width="12%">
-  </div>
-
-  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-
-
-    <div fxLayout="column wrap" fxLayoutAlign="center center" style="width: 20% !important;">
-
-      <div class="titles" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
-        <h1  class="titles">Cambio de contraseña</h1>
-      </div>
-
-
-      <div  fxFlex="100" fxFlex.lt-md>
-        <mat-form-field appearance="outline">
-          <mat-label>Nueva Contraseña</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'">
-          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </mat-form-field>
-      </div>
-      <div  fxFlex="100" fxFlex.lt-md>
-        <mat-form-field appearance="outline">
-          <mat-label>Confirmar Contraseña</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'">
-          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </mat-form-field>
-      </div>
-
-
-
-      <div class="padd contenedor" fxFlex="50" fxFlex.lt-md>
-        <img src="../../../../assets/password/guardar-cambios.png" routerLink="/login">
-
-      </div>
-      <div class="padd" fxFlex="50" fxFlex.lt-md>
-
-        <a routerLink="/password">Olvidé mi contraseña</a>
-      </div>
-
+    <div style="padding-top: 13%;padding-bottom: 3% " fxLayout="row" fxLayoutAlign="center center">
+        <img src="../../../../assets/login/lleva.png" height="0.7%" width="12%">
     </div>
 
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
 
 
-  </div>
+        <div fxLayout="column wrap" fxLayoutAlign="center center" style="width: 20% !important;">
+
+            <div class="titles" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
+                <h1 class="titles">Cambio de contraseña</h1>
+            </div>
+
+
+            <div fxFlex="100" fxFlex.lt-md>
+                <mat-form-field appearance="outline">
+                    <mat-label>Nueva Contraseña</mat-label>
+                    <input matInput [type]="hide ? 'password' : 'text'">
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+                </mat-form-field>
+            </div>
+            <div fxFlex="100" fxFlex.lt-md>
+                <mat-form-field appearance="outline">
+                    <mat-label>Confirmar Contraseña</mat-label>
+                    <input matInput [type]="hide ? 'password' : 'text'">
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+                </mat-form-field>
+            </div>
+
+
+
+            <div class="padd contenedor" fxFlex="50" fxFlex.lt-md>
+                <img src="../../../../assets/password/guardar-cambios.png" routerLink="/login">
+
+            </div>
+            <div class="padd" fxFlex="50" fxFlex.lt-md>
+
+                <a routerLink="/password">Olvidé mi contraseña</a>
+            </div>
+
+        </div>
+
+
+
+    </div>
+    <mat-card style="background: #eee; padding: 15px 35px;">
+        <app-footer></app-footer>
+    </mat-card>
 </div>
