--- a/src/app/components/home/billetera/billetera.component.css
+++ b/src/app/components/home/billetera/billetera.component.css
@@ -5,7 +5,7 @@ button {
 }
 
 hr {
-    width: 98%;
+    width: 100%;
     color: #eee;
 }
 
@@ -29,46 +29,66 @@ h2 {
     color: rgb(47, 132, 87);
 }
 
-.form-historial,
-.form-servicio,
-.form-email,
-.form-soporte {
-    display: none !important;
-}
-
 .active {
     color: rgb(47, 132, 87);
 }
 
-button.btn:active {
-    color: rgb(47, 132, 87);
+.head-billetera,
+.transacciones {
+    display: flex;
+    justify-content: space-between;
+}
+
+.head-billetera {
+    padding: 0px 10px;
+}
+
+.transacciones {
+    padding: 10px;
+}
+
+.left-billetera {
+    width: 30%;
+}
+
+.right-billetera {
+    width: 70%;
+    display: flex;
 }
 
 .img-lleva {
-    width: 20%;
+    width: 60px;
 }
 
 .img-billetera {
     position: absolute;
-    top: 45px;
-    left: 100px;
-    width: 10%;
+    top: 35px;
+    left: 105px;
+    width: 100px;
 }
 
 .saldo {
     display: flex;
+    width: 70%;
+    padding: 15px;
+    background: #eee;
+    line-height: 32.5px;
+    position: relative;
 }
 
 .saldo label {
     width: 70%;
     display: inline-block;
-    background: #eee;
-    padding: 18px;
 }
 
-.saldo label span {
+.saldo span {
     float: right;
     font-size: 23px;
+}
+
+.recarga img {
+    width: 100%;
+    height: 100%;
 }
 
 .transacciones label {
@@ -82,90 +102,58 @@ button.btn:active {
 }
 
 .transacciones button span {
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
-.enviar {
+.table-billetera {
+    overflow-y: auto;
+}
+
+.table-billetera table {
+    min-width: 600px;
+}
+
+mat-paginator {
     width: 100%;
-    background: rgb(47, 132, 87);
-    padding: 10px;
-    border-radius: 0 1.5em;
-    font-size: 14px;
-    color: #fff;
+    min-width: 600px;
 }
 
-.servicio {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 7px;
+
+/* @media (max-width: 800px) {
+    .opciones {
+        display: block !important;
+    }
+    .opc-btn {
+        margin-right: 0 !important;
+        margin-bottom: 10px !important;
+    }
+} */
+
+@media (max-width: 700px) {
+    .head-billetera {
+        display: block !important;
+    }
+    .right-billetera {
+        width: 100% !important;
+    }
 }
 
-.servicio a {
-    color: rgb(47, 132, 87);
-}
-
-mat-card-header {
-    background: rgb(240, 179, 9);
-    position: relative;
-    padding: 10px;
-    border-left: 4px solid rgb(47, 132, 87);
-}
-
-mat-card-header label {
-    font-size: 15px;
-}
-
-mat-card-header a {
-    position: absolute;
-    right: 22px;
-    color: rgb(47, 132, 87);
-    font-size: 13px;
-}
-
-::ng-deep.mat-card-header-text {
-    margin: 0 !important;
-}
-
-::ng-deep.mat-card-title {
-    margin: 0 !important;
-}
-
-mat-card-content {
-    padding: 10px 10px 20px 10px;
-    background: #eee;
-}
-
-.mas {
-    text-align: center;
-}
-
-.mas a {
-    color: rgb(47, 132, 87);
-}
-
-.mas a img {
-    margin-left: 29px;
-}
-
-.opciones {
-    display: flex;
-    width: 80%;
-    margin: auto;
-}
-
-.opciones p {
-    margin-right: 10px;
-    color: rgb(47, 132, 87);
-    margin-top: 18px;
-}
-
-.opc-btn {
-    display: flex;
-    padding: 10px;
-    background: #eee;
-    margin-right: 10px;
-}
-
-.opc-btn label {
-    margin-left: 10px;
+@media (max-width: 500px) {
+    .saldo {
+        min-height: 32.5px;
+    }
+    .saldo label {
+        position: absolute;
+        top: 5px;
+    }
+    .saldo span {
+        position: absolute;
+        top: 25px;
+    }
+    .transacciones label {
+        font-size: 14px;
+    }
+    .transacciones button span {
+        display: none;
+    }
 }
