--- a/src/app/components/home/profile/profile.component.css
+++ b/src/app/components/home/profile/profile.component.css
@@ -4,10 +4,6 @@ mat-divider {
     margin: auto;
 }
 
-mat-form-field {
-    width: 100%;
-}
-
 .active {
     color: rgb(47, 132, 87);
 }
@@ -22,86 +18,67 @@ button {
     border: 0;
 }
 
-.form-direccion,
-.form-kms,
-.form-recomienda {
-    display: none !important;
-}
-
-.location {
-    margin: 15px;
-}
-
-.delete {
-    position: absolute;
-    right: 0;
-    margin-right: 10px;
-}
-
-.title-beneficios {
-    width: 100%;
-    text-align: center;
-    color: rgb(47, 132, 87);
-    font-size: 16px;
-}
-
-::ng-deep.mat-tab-label,
- ::ng-deep.mat-tab-label-active {
-    min-width: 0!important;
-    width: 100%;
-}
-
-::ng-deep.mat-ink-bar {
-    background: rgb(47, 132, 87) !important;
-}
-
-::ng-deep.mat-tab-body {
-    margin-top: 10px;
-    background: #eee !important;
-    padding: 10px;
-}
-
-h4 {
-    color: rgb(47, 132, 87);
-    font-size: 23px;
-    text-align: center;
-    margin-bottom: 25px;
-}
-
-.copy-codigo {
+.form-cuenta {
+    width: 95%;
     margin: auto;
-    margin-top: auto;
-    width: 200px;
-    border: 1px solid #eee;
-    padding: 10px;
-    border-radius: 10px;
-    margin-top: -20px;
-    position: relative;
-    height: 23px;
-    cursor: pointer;
+    display: flex;
+    padding: 50px 0;
 }
 
-.copy-codigo label {
-    font-size: 24px;
-    font-weight: initial;
-    cursor: pointer;
+.foto-perfil {
+    width: 25%;
 }
 
-.fondo {
-    position: absolute;
-    right: 6px;
-    top: 6px;
-    width: 32px;
-    height: 32px;
-    background: #eee;
-    border-radius: 19px;
-    text-align: center;
+.form-datos {
+    width: 75%;
 }
 
-.msj-copy {
-    display: none;
-    text-align: center;
-    margin-top: 5px;
-    color: rgb(47, 132, 87);
-    font-size: 12px;
+.inputs {
+    display: flex;
+}
+
+.documento {
+    width: 52%;
+}
+
+.inputs mat-form-field {
+    width: 50%;
+    margin: 0 5px;
+}
+
+.inputs button {
+    width: 50%;
+}
+
+.inputs button img {
+    width: 100%;
+}
+
+@media (max-width: 950px) {
+    .form-cuenta {
+        display: block;
+        text-align: center;
+    }
+    .foto-perfil {
+        width: 100%;
+    }
+    .form-datos {
+        width: 100%;
+    }
+}
+
+@media (max-width: 700px) {
+    .inputs {
+        display: block;
+    }
+    .inputs mat-form-field {
+        width: 100% !important;
+        margin: 0 5px;
+    }
+}
+
+@media (max-width: 550px) {
+    .inputs button {
+        width: 100%;
+    }
 }
