--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -1,38 +1,40 @@
 <div class="background">
-  <div style="padding-top: 13%;padding-bottom: 3% " fxLayout="row" fxLayoutAlign="center center">
-    <img src="../../../assets/login/lleva.png" height="0.7%" width="12%">
-  </div>
-
-  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-
-
-    <div fxLayout="column wrap" fxLayoutAlign="center center" style="width: 20% !important;">
-
-      <div class="titles" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
-        <h1  class="titles">Olvidé mi contraseña</h1>
-      </div>
-      <div class="centrar" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
-        <h5  >Escribe el correo electrónico con el que te registraste y te enviaremos
-        un link para reestablecer tu contraseña</h5>
-      </div>
-
-      <div  fxFlex="100" fxFlex.lt-md>
-        <mat-form-field appearance="outline">
-          <mat-label>Correo Electrónico</mat-label>
-          <input matInput type="text" placeholder="Correo" required>
-        </mat-form-field>
-      </div>
-
-
-
-      <div class="padd contenedor" fxFlex="50" fxFlex.lt-md>
-        <img src="../../../assets/password/rectangulo.png">
-        <div class="centrado" routerLink="/change-password">Reestablecer contraseña</div>
-
-      </div>
+    <div style="padding-top: 13%;padding-bottom: 3% " fxLayout="row" fxLayoutAlign="center center">
+        <img src="../../../assets/login/lleva.png" height="0.7%" width="12%">
     </div>
 
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
 
 
-  </div>
+        <div fxLayout="column wrap" fxLayoutAlign="center center" style="width: 20% !important;">
+
+            <div class="titles" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
+                <h1 class="titles">Olvidé mi contraseña</h1>
+            </div>
+            <div class="centrar" style="padding: 10px;" fxFlex="100" fxFlex.lt-md>
+                <h5>Escribe el correo electrónico con el que te registraste y te enviaremos un link para reestablecer tu contraseña</h5>
+            </div>
+
+            <div fxFlex="100" fxFlex.lt-md>
+                <mat-form-field appearance="outline">
+                    <mat-label>Correo Electrónico</mat-label>
+                    <input matInput type="text" placeholder="Correo" required>
+                </mat-form-field>
+            </div>
+
+
+
+            <div class="padd contenedor" fxFlex="50" fxFlex.lt-md>
+                <img src="../../../assets/password/rectangulo.png">
+                <div class="centrado" routerLink="/change-password">Reestablecer contraseña</div>
+
+            </div>
+        </div>
+
+
+
+    </div>
+    <mat-card style="background: #eee; padding: 15px 35px;">
+        <app-footer></app-footer>
+    </mat-card>
 </div>
